MyAgentforceProject/force-app/main/default/objects/Bedrock_Process_Step__mdt/Bedrock_Process_Step__mdt.object-meta.xml
<CustomObject>
    <description>Defines process steps for the Bedrock Dynamic Process Framework. Records drive the chevron UI on any object record page.</description>
    <label>Bedrock Process Step</label>
    <pluralLabel>Bedrock Process Steps</pluralLabel>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Label__c</fullName>
        <label>Step Label</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <required>true</required>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>