MyAgentforceProject/force-app/main/default/objects/Bedrock_Process_Step__mdt/fields/Action_Target__c.field-meta.xml
<CustomField>
    <fullName>Action_Target__c</fullName>
    <label>Action Target</label>
    <description>API name of the Screen Flow to launch when Action Type is Launch Flow.</description>
    <inlineHelpText>Enter the Salesforce API name of the Screen Flow (e.g. My_Screen_Flow). Used only when Action Type = Launch Flow.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>