MyAgentforceProject/force-app/main/default/objects/Bedrock_Process_Step__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <description>Determines what happens when a user clicks this process step chevron.</description>
    <inlineHelpText>Open Modal = show description; Launch Flow = run a Screen Flow; Edit Record = open the record edit page.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Modal</fullName>
                <default>true</default>
                <label>Open Modal</label>
            </value>
            <value>
                <fullName>Launch Flow</fullName>
            </value>
            <value>
                <fullName>Edit Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>