MyAgentforceProject/force-app/main/default/objects/Bedrock_Process_Step__mdt/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <label>Customer Rating</label>
    <length>80</length>
    <type>Text</type>
</CustomField>