MyAgentforceProject/force-app/main/default/objects/Bedrock_Process_Step__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>